test_suite/tests/ui/duplicate-attribute/rename-ser-rename.stderr
error: duplicate serde attribute `rename`
 --> $DIR/rename-ser-rename.rs:7:13
  |
7 |     #[serde(rename = "y")]
  |             ^^^^^^

error: aborting due to previous error

